--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="brunonm.conductor.mobile.desafio.desafiomobile">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ExtratoActivity"
+            android:name=".activities.ExtratoActivity"
             android:label="@string/title_activity_extrato"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
